# senn

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md
include/glad/: glad.h
meshes/: halo.iqm  plane.iqm  sphere.iqm
meshes/blender/: plane.blend  plane.blend1
scenes/: cornell.yaml
shaders/: drawer.frag  drawer.vert  shadowmap.frag  shadowmap.vert  simple.frag  simple.vert
src/: glad.c  libreloader.cpp  libreloader.hpp  main.cpp  recompiler.cpp  recompiler.hpp
src/imgui/: CMakeLists.txt  imgui_impl_glfw_gl3.cpp  imgui_impl_glfw_gl3.hpp
src/renderer/: CMakeLists.txt  backend.hpp  buffer.hpp  camera.cpp  camera.hpp  dirwatcher.cpp  dirwatcher.hpp  gl_utils.cpp  gl_utils.hpp  light.cpp  light.hpp  lodepng.h  meshloader.cpp  meshloader.hpp  primitives.cpp  primitives.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  sceneloader.cpp  sceneloader.hpp  shader_loader.cpp  shader_loader.hpp  shaderloader.cpp  shaderloader.hpp  utils.cpp  utils.hpp
textures/: CMakeLists.txt  cornell_diffuse.dds
